--- a/MovieWeb/index.html
+++ b/MovieWeb/index.html
@@ -35,7 +35,9 @@
         <div class="left">
           <h1 class="nama">Halo, <span id="nama"></span></h1>
           <h2>Selamat datang di <span class="RecoMovies">RecoMovies</span></h2>
-          <img src="assets/movieimg.jpg" alt="gambar logo" class="logo" />
+          <aside>
+            <img src="assets/movieimg.jpg" alt="gambar logo" class="logo" />
+          </aside>
         </div>
 
         <div class="vertical-line"></div>
