--- a/MovieWeb/list.html
+++ b/MovieWeb/list.html
@@ -36,7 +36,7 @@
         </div>
       </div>
 
-      <script src="../script.js"></script>
+      <script src="script.js"></script>
     </main>
     <footer>&copy; 2024: Wilfrida Sisilia</footer>
   </body>
